OP Creidt Settle ment and arabic folder added

--- a/client/src/Components/OPBillingAr/DisplayInsuranceDetails/PrimaryInsurance/PrimaryInsuranceDetails.scss
+++ b/client/src/Components/OPBillingAr/DisplayInsuranceDetails/PrimaryInsurance/PrimaryInsuranceDetails.scss
@@ -3,19 +3,19 @@
   border-radius: 5px;
 }
 
-.htpl-primary-display-insurance-form-Ar {
+.htpl-primary-display-insurance-form {
   .primary-details {
-    //padding: 5px;
+    padding: 15px;
     border-right: 1px solid #000;
-    // .primary-box-container {
-    //   padding: 5px;
-    // }
+    .primary-box-container {
+      padding: 5px;
+    }
   }
 
   .secondary-details {
-    //  padding: 5px;
+    padding: 15px;
     .secondary-box-container {
-      // padding: 5px;
+      padding: 5px;
     }
   }
 
