--- a/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails.css
+++ b/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails.css
@@ -1,6 +1,35 @@
-.hptl-display-visit-details-frame .visitdetails-section {
+.hptl-display-visit-details {
   border: 1px solid #d3d3d3;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px;
   background: #ffff; }
+  .hptl-display-visit-details .visit-section {
+    border: 1px solid #d3d3d3;
+    margin: 10px;
+    margin-top: 0px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px; }
+  .hptl-display-visit-details .toggle-section {
+    margin: 10px;
+    margin-bottom: 0px; }
+
+.hptl-display-active-visit-form .form-details {
+  padding-top: 2px; }
+
+.hptl-display-active-visit-form mark {
+  background: none;
+  color: red; }
+
+.hptl-display-active-visit-form label {
+  font-weight: 400;
+  font-size: 11px; }
+
+.hptl-display-active-visit-form th,
+.hptl-display-active-visit-form td {
+  font-size: 11px;
+  border-right: 1px solid #e6e6e6; }
+
+.gridWithRadio table th:first-child {
+  width: 16px !important; }
