--- a/client/src/Components/OPBillingAr/PatientDisDetails/PatientDetails.css
+++ b/client/src/Components/OPBillingAr/PatientDisDetails/PatientDetails.css
@@ -1,6 +1,18 @@
-.hptl-phase1-Display-patient-details .patient-section {
-  border: 1px solid #d3d3d3;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px;
-  background: #ffff; }
+.hptl-phase1-display-patient-form .form-details {
+  padding: 5px;
+  padding-bottom: 5px; }
+
+.hptl-phase1-display-patient-form mark {
+  background: none;
+  color: red; }
+
+.hptl-phase1-display-patient-form label {
+  font-weight: 400;
+  font-size: 11px; }
+
+.hptl-phase1-display-patient-form .form-group {
+  margin-bottom: 0;
+  margin-top: 4px;
+  padding: 0;
+  padding-top: 20px;
+  cursor: pointer; }
