--- a/client/src/Components/OPBillingAr/PatientDisDetails/PatientDetails.scss
+++ b/client/src/Components/OPBillingAr/PatientDisDetails/PatientDetails.scss
@@ -1,10 +1,22 @@
-.hptl-phase1-Display-patient-details {
-  // background: #f2f2f2;
-  .patient-section {
-    border: 1px solid #d3d3d3;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-top-right-radius: 5px;
-    background: #ffff;
+.hptl-phase1-display-patient-form {
+  .form-details {
+    padding: 5px;
+    padding-bottom: 5px;
+  }
+  mark {
+    background: none;
+    color: red;
+  }
+  label {
+    font-weight: 400;
+    font-size: 11px;
+  }
+
+  .form-group {
+    margin-bottom: 0;
+    margin-top: 4px;
+    padding: 0;
+    padding-top: 20px;
+    cursor: pointer;
   }
 }
