--- a/client/src/Components/RegistrationPatientAr/InsuranceDetails/SecondaryInsurance/SecondaryInsurance.scss
+++ b/client/src/Components/RegistrationPatientAr/InsuranceDetails/SecondaryInsurance/SecondaryInsurance.scss
@@ -1,14 +1,9 @@
-.hptl-phase1-secinsurance-form {
+.htpl-phase1-seconary-insurance-form {
   background: #ffff;
   border-radius: 5px;
-  // padding: 10px;
-}
-.htpl-phase1-seconary-insurance-form-Ar {
   .primary-details {
     padding-top: 8px;
-    border-left: 1px dashed #d3d3d3;
-    border-right: none;
-    padding-bottom: 22px;
+    border-right: 1px dashed #d3d3d3;
   }
   // label {
   //   font-weight: 400;
@@ -24,8 +19,9 @@
   }
   .radio-design {
     position: absolute;
-    top: 4px;
-    left: 7px;
+    top: 5px;
+    left: 36px;
+    // font-size: 12px;
   }
   .go-button {
     cursor: pointer;
