--- a/client/src/Components/RegistrationPatientAr/PatientDetails/PatientForm/PatientForm.css
+++ b/client/src/Components/RegistrationPatientAr/PatientDetails/PatientForm/PatientForm.css
@@ -1,35 +1,31 @@
-.hptl-phase1-patient-ar-form {
+.hptl-phase1-add-patient-form {
   background: #ffff;
   border-radius: 5px; }
-
-.hptl-phase1-add-patient-ar-form .primary-details {
-  padding-top: 8px;
-  border-left: 1px dashed #d3d3d3;
-  border-right: none; }
-
-.hptl-phase1-add-patient-ar-form mark {
-  background: none;
-  color: red; }
-
-.hptl-phase1-add-patient-ar-form .centerAlign {
-  text-align: center; }
-
-.hptl-phase1-add-patient-ar-form .text_field {
-  width: 100% !important;
-  background-color: #fbfbfb;
-  margin-right: 5px; }
-
-.hptl-phase1-add-patient-ar-form .secondary-details {
-  padding-top: 8px; }
-  .hptl-phase1-add-patient-ar-form .secondary-details .secondary-box-container .attach-design {
-    background: #8c8c8c;
-    color: #fff;
-    position: relative;
-    cursor: pointer;
-    margin-left: -1px;
-    margin-right: -1px; }
-  .hptl-phase1-add-patient-ar-form .secondary-details .secondary-box-container .preview-image {
-    position: absolute;
-    top: -1px;
-    left: 15px;
-    height: 101px; }
+  .hptl-phase1-add-patient-form .primary-details {
+    border-right: 1px dashed #d3d3d3;
+    padding-top: 8px; }
+  .hptl-phase1-add-patient-form mark {
+    background: none;
+    color: red; }
+  .hptl-phase1-add-patient-form .centerAlign {
+    text-align: center; }
+  .hptl-phase1-add-patient-form .text_field {
+    width: 100% !important;
+    background-color: #fbfbfb;
+    margin-right: 5px; }
+  .hptl-phase1-add-patient-form .paddin-bottom-5 {
+    padding-bottom: 4px; }
+  .hptl-phase1-add-patient-form .secondary-details {
+    padding-top: 8px; }
+    .hptl-phase1-add-patient-form .secondary-details .secondary-box-container .attach-design {
+      background: #8c8c8c;
+      color: #fff;
+      position: relative;
+      cursor: pointer;
+      margin-left: -1px;
+      margin-right: -1px; }
+    .hptl-phase1-add-patient-form .secondary-details .secondary-box-container .preview-image {
+      position: absolute;
+      top: -1px;
+      left: 15px;
+      height: 101px; }
