OP Billinga nd front desk arabic converstion folder added

--- a/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails.scss
+++ b/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails.scss
@@ -9,6 +9,7 @@
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
   background: #ffff;
   .visit-section {
     border: 1px solid #d3d3d3;
