--- a/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails.css
+++ b/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails.css
@@ -3,6 +3,7 @@
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
   background: #ffff; }
   .hptl-display-visit-details .visit-section {
     border: 1px solid #d3d3d3;
