--- a/client/src/Components/RegistrationPatientAr/registration.scss
+++ b/client/src/Components/RegistrationPatientAr/registration.scss
@@ -1,3 +1,34 @@
+.arabicVersionFrontDesk {
+  direction: rtl;
+  text-align: right;
+
+  .primary-details {
+    border-right: none;
+    border-left: 1px dashed #d3d3d3;
+  }
+  label {
+    font-size: 0.8rem;
+  }
+  .toggle-section {
+    .nav {
+      padding: 0;
+      right: auto;
+    }
+  }
+  .showall {
+    left: 0;
+    right: auto;
+  }
+  .clearall {
+    left: 20px;
+    right: auto;
+  }
+  .print-area div {
+    float: right;
+    height: 75px;
+    border-right: 1px solid #adaaaa;
+  }
+}
 .hptl-phase1-patientreg-details {
   background: #ffff;
   .patient-section {
