--- a/client/src/Components/common/BreadCrumb/breadcrumb.css
+++ b/client/src/Components/common/BreadCrumb/breadcrumb.css
@@ -23,7 +23,7 @@
     padding: 0;
     margin: 0; }
     .breadCrumb-Data ul li {
-      color: #d3d3d3;
+      color: #9a9a9a;
       font-size: 0.75rem; }
       .breadCrumb-Data ul li a label {
         text-transform: capitalize; }
@@ -54,6 +54,12 @@
       margin-top: 15px;
       padding-left: 5px;
       cursor: pointer; }
+  .breadCrumb-Data .spotlightSearchBox {
+    border: 1px solid #ced4d9;
+    border-radius: 5px;
+    margin-left: 0; }
+  .breadCrumb-Data .spotlightSearchIconBox {
+    border-left: 1px solid #ced4d8; }
 
 .text {
   background-color: #ffffff;
