--- a/client/src/Components/common/BreadCrumb/breadcrumb.scss
+++ b/client/src/Components/common/BreadCrumb/breadcrumb.scss
@@ -31,7 +31,7 @@
     margin: 0;
     // font-family: "Trebuchet MS", " Helvetica, sans-serif";
     li {
-      color: #d3d3d3;
+      color: #9a9a9a;
       font-size: $fontSize;
       a {
         label {
@@ -83,6 +83,16 @@
       padding-left: 5px;
       cursor: pointer;
     }
+  }
+
+  .spotlightSearchBox {
+    border: 1px solid #ced4d9;
+    border-radius: 5px;
+    margin-left: 0;
+  }
+
+  .spotlightSearchIconBox {
+    border-left: 1px solid rgb(206, 212, 216);
   }
 }
 .text {
