--- a/client/src/Components/common/BreadCrumb/breadcrumb.css
+++ b/client/src/Components/common/BreadCrumb/breadcrumb.css
@@ -94,11 +94,15 @@
   height: auto; }
   .print-area .dropdown-menu .dropdown-item {
     padding: 0.5rem 0.8rem;
-    color: #686868; }
+    color: #686868;
+    border-bottom: 1px solid #686868;
+    cursor: pointer; }
     .print-area .dropdown-menu .dropdown-item i {
       margin-right: 0.5rem; }
     .print-area .dropdown-menu .dropdown-item:hover {
       color: #00999c; }
+    .print-area .dropdown-menu .dropdown-item:last-child {
+      border-bottom: none; }
 
 .print-area .printMenuDisplay:hover .printActionMenu,
 .print-area .printImg:hover .printActionMenu {
