--- a/client/src/Components/common/BreadCrumb/breadcrumb.scss
+++ b/client/src/Components/common/BreadCrumb/breadcrumb.scss
@@ -132,11 +132,16 @@
     .dropdown-item {
       padding: 0.5rem 0.8rem;
       color: #686868;
+      border-bottom: 1px solid #686868;
+      cursor: pointer;
       i {
         margin-right: 0.5rem;
       }
       &:hover {
         color: #00999c;
+      }
+      &:last-child {
+        border-bottom: none;
       }
     }
   }
