--- a/client/src/Components/RegistrationPatientAr/registration.css
+++ b/client/src/Components/RegistrationPatientAr/registration.css
@@ -17,9 +17,11 @@
     right: auto; }
   .arabicVersionFrontDesk .print-area div {
     float: left;
-    height: 75px;
+    height: auto;
     border-right: 1px solid #adaaaa;
     border-left: 0; }
+  .arabicVersionFrontDesk .print-area .dropdown-menu {
+    left: 0; }
   .arabicVersionFrontDesk .htpl-phase1-radio-btn {
     margin-left: 5px; }
   .arabicVersionFrontDesk .customRadio .inline + .inline {
