--- a/client/src/Components/RegistrationPatientAr/registration.scss
+++ b/client/src/Components/RegistrationPatientAr/registration.scss
@@ -25,10 +25,16 @@
   }
   .print-area div {
     float: left;
-    height: 75px;
+    height: auto;
     border-right: 1px solid #adaaaa;
     border-left: 0;
   }
+  .print-area {
+    .dropdown-menu {
+      left: 0;
+    }
+  }
+
   .htpl-phase1-radio-btn {
     margin-left: 5px;
   }
