--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -503,6 +503,24 @@ body {
 :global .hptl-phase1-master-footer .app_bar {
   background: #000000; }
 
+:global .no-padding-left-right {
+  padding-left: 0;
+  padding-right: 0; }
+
+:global .no-padding-left {
+  padding-left: 0; }
+
+:global .no-padding-right {
+  padding-left: 0; }
+
+:global .creditCardIcon {
+  position: absolute;
+  background: #000;
+  height: 20px;
+  width: 30px;
+  right: 5px;
+  bottom: 8px; }
+
 label {
   margin-bottom: 0px;
   font-size: 0.75rem;
