--- a/client/src/Components/AppointmentAr/AppointmentAr.css
+++ b/client/src/Components/AppointmentAr/AppointmentAr.css
@@ -140,7 +140,8 @@
 
 .appointment .tg {
   display: inline-block;
-  margin-right: 5px;
+  margin-left: 5px;
+  margin-right: 0;
   vertical-align: top;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   margin-bottom: 10px;
