credit card imaging and formating

--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -515,11 +515,10 @@ body {
 
 :global .creditCardIcon {
   position: absolute;
-  background: #000;
   height: 20px;
   width: 30px;
-  right: 5px;
-  bottom: 8px; }
+  padding-top: 6px;
+  right: 0; }
 
 label {
   margin-bottom: 0px;
