--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -632,11 +632,10 @@ body {
   }
   .creditCardIcon {
     position: absolute;
-    background: #000;
     height: 20px;
     width: 30px;
-    right: 5px;
-    bottom: 8px;
+    padding-top: 6px;
+    right: 0;
   }
 }
 
