--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -1,7 +1,10 @@
 body {
   line-height: 1.45;
   font-family: "Titillium Web", sans-serif;
-  background-color: #e9e9e9; }
+  font-weight: normal;
+  background-color: #e9e9e9;
+  -webkit-font-smoothing: antialiased !important;
+  -moz-osx-font-smoothing: grayscale; }
 
 :global .header {
   max-height: 50px; }
