--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -2,7 +2,10 @@
 body {
   line-height: 1.45;
   font-family: $fontFamily;
+  font-weight: $fontWeight;
   background-color: #e9e9e9;
+  -webkit-font-smoothing: $webkit-font-smoothing;
+  -moz-osx-font-smoothing: $moz-osx-font-smoothing;
 }
 :global {
   .header {
