--- a/client/src/Components/Pharmacy/PointOfSale/PointOfSale.scss
+++ b/client/src/Components/Pharmacy/PointOfSale/PointOfSale.scss
@@ -1,5 +1,6 @@
 .hptl-phase1-pos-form {
   min-height: 80vh;
+  margin-bottom: 60px;
   .form-details {
     padding: 5px;
     padding-bottom: 0px;
