--- a/client/src/Components/Pharmacy/SalesReturn/SalesReturn.scss
+++ b/client/src/Components/Pharmacy/SalesReturn/SalesReturn.scss
@@ -1,5 +1,6 @@
 .hptl-phase1-sales-form {
   min-height: 80vh;
+  padding-bottom: 60px;
   .form-details {
     padding: 5px;
     padding-bottom: 0px;
