--- a/client/src/Components/Inventory/InvRequisitionEntry/InvRequisitionEntry.scss
+++ b/client/src/Components/Inventory/InvRequisitionEntry/InvRequisitionEntry.scss
@@ -1,5 +1,6 @@
 .hptl-phase1-requisition-form {
   min-height: 80vh;
+  padding-bottom: 60px;
   .form-details {
     padding: 5px;
     padding-bottom: 0px;
