--- a/client/src/Components/Pharmacy/PointOfSale/PointOfSale.css
+++ b/client/src/Components/Pharmacy/PointOfSale/PointOfSale.css
@@ -1,5 +1,6 @@
 .hptl-phase1-pos-form {
-  min-height: 80vh; }
+  min-height: 80vh;
+  margin-bottom: 60px; }
   .hptl-phase1-pos-form .form-details {
     padding: 5px;
     padding-bottom: 0px; }
