--- a/client/src/Components/Pharmacy/SalesReturn/SalesReturn.css
+++ b/client/src/Components/Pharmacy/SalesReturn/SalesReturn.css
@@ -1,5 +1,6 @@
 .hptl-phase1-sales-form {
-  min-height: 80vh; }
+  min-height: 80vh;
+  padding-bottom: 60px; }
   .hptl-phase1-sales-form .form-details {
     padding: 5px;
     padding-bottom: 0px; }
