--- a/client/src/Components/Procurement/DeliveryNoteEntry/DeliveryNoteEntry.scss
+++ b/client/src/Components/Procurement/DeliveryNoteEntry/DeliveryNoteEntry.scss
@@ -4,6 +4,7 @@
 #DNGrid {
   .ReactTable {
     max-width: 95vw !important;
+    max-height: 42vh !important;
   }
 
   @media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
