--- a/client/src/Components/Inventory/InvRequisitionList/InvRequisitionList.scss
+++ b/client/src/Components/Inventory/InvRequisitionList/InvRequisitionList.scss
@@ -17,4 +17,16 @@
   td {
     border-right: 1px solid #e6e6e6;
   }
+  #Inv_RequisitionListCntr {
+    .ReactTable {
+      max-width: 95vw !important;
+      max-height: 42vh !important;
+    }
+
+    @media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
+      .ReactTable {
+        max-width: 93vw !important;
+      }
+    }
+  }
 }
