--- a/client/src/Components/Procurement/PurchaseOrderList/PurchaseOrderList.scss
+++ b/client/src/Components/Procurement/PurchaseOrderList/PurchaseOrderList.scss
@@ -17,4 +17,16 @@
   td {
     border-right: 1px solid #e6e6e6;
   }
+  #purchaseOrderListCntr {
+    .ReactTable {
+      max-width: 95vw !important;
+      max-height: 72vh !important;
+    }
+
+    @media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
+      .ReactTable {
+        max-width: 93vw !important;
+      }
+    }
+  }
 }
