Added New Shipment Prototype Dummy Screen + Converted .jpg and .png to Google WebP format

--- a/client/src/Components/AppointmentAr/AppointmentAr.css
+++ b/client/src/Components/AppointmentAr/AppointmentAr.css
@@ -28,7 +28,7 @@
     margin-right: 10px;
     margin-left: 0px; }
   .doctorApp-Ar .breadCrumb-Data .hdg_bredcrump {
-    background: url("./../../assets/images/breadcrump_border_Ar.png") no-repeat top left #fff; }
+    background: url("../../assets/images/breadcrump_border_Ar.webp") no-repeat top left #fff; }
   .doctorApp-Ar .breadCrumb-Data .spotlightSearchBox {
     margin-right: 0; }
   .doctorApp-Ar .breadCrumb-Data .spotlightSearchIconBox {
