--- a/client/src/Components/AppointmentAr/AppointmentAr.scss
+++ b/client/src/Components/AppointmentAr/AppointmentAr.scss
@@ -45,8 +45,8 @@
 
   .breadCrumb-Data {
     .hdg_bredcrump {
-      background: url("./../../assets/images/breadcrump_border_Ar.png")
-        no-repeat top left #fff;
+      background: url("../../assets/images/breadcrump_border_Ar.webp") no-repeat
+        top left #fff;
     }
 
     .spotlightSearchBox {
