--- a/client/src/Components/Login/Login.scss
+++ b/client/src/Components/Login/Login.scss
@@ -101,7 +101,7 @@
   }
 }
 .bg {
-  background-image: url("../../assets/images/login_bg.jpg");
+  background-image: url("../../assets/images/login_bg.webp");
   position: absolute;
   height: 100%;
   background-position: center center;
