--- a/client/src/Components/PatientProfile/Dental/Dental.css
+++ b/client/src/Components/PatientProfile/Dental/Dental.css
@@ -88,69 +88,69 @@
     bottom: 4px !important;
     left: 8px !important; }
   #dentalTreatment .molar-up-1 {
-    background-image: url(../../../assets/images/molar-up.png); }
+    background-image: url(../../../assets/images/molar-up.webp); }
   #dentalTreatment .molar-up-2 {
-    background-image: url(../../../assets/images/molar-up.png); }
+    background-image: url(../../../assets/images/molar-up.webp); }
   #dentalTreatment .molar-up-3 {
-    background-image: url(../../../assets/images/molar-up.png); }
+    background-image: url(../../../assets/images/molar-up.webp); }
   #dentalTreatment .molar-up-14 {
-    background-image: url(../../../assets/images/molar-up.png); }
+    background-image: url(../../../assets/images/molar-up.webp); }
   #dentalTreatment .molar-up-15 {
-    background-image: url(../../../assets/images/molar-up.png); }
+    background-image: url(../../../assets/images/molar-up.webp); }
   #dentalTreatment .molar-up-16 {
-    background-image: url(../../../assets/images/molar-up.png); }
+    background-image: url(../../../assets/images/molar-up.webp); }
   #dentalTreatment .premolar-up-4 {
-    background-image: url(../../../assets/images/premolar-up.png); }
+    background-image: url(../../../assets/images/premolar-up.webp); }
   #dentalTreatment .premolar-up-5 {
-    background-image: url(../../../assets/images/premolar-up.png); }
+    background-image: url(../../../assets/images/premolar-up.webp); }
   #dentalTreatment .premolar-up-12 {
-    background-image: url(../../../assets/images/premolar-up.png); }
+    background-image: url(../../../assets/images/premolar-up.webp); }
   #dentalTreatment .premolar-up-13 {
-    background-image: url(../../../assets/images/premolar-up.png); }
+    background-image: url(../../../assets/images/premolar-up.webp); }
   #dentalTreatment .canine-up-6 {
-    background-image: url(../../../assets/images/canine-up.png); }
+    background-image: url(../../../assets/images/canine-up.webp); }
   #dentalTreatment .canine-up-11 {
-    background-image: url(../../../assets/images/canine-up.png); }
+    background-image: url(../../../assets/images/canine-up.webp); }
   #dentalTreatment .incisors-up-up-7 {
-    background-image: url(../../../assets/images/incisors-up.png); }
+    background-image: url(../../../assets/images/incisors-up.webp); }
   #dentalTreatment .incisors-up-up-8 {
-    background-image: url(../../../assets/images/incisors-up.png); }
+    background-image: url(../../../assets/images/incisors-up.webp); }
   #dentalTreatment .incisors-up-up-9 {
-    background-image: url(../../../assets/images/incisors-up.png); }
+    background-image: url(../../../assets/images/incisors-up.webp); }
   #dentalTreatment .incisors-up-up-10 {
-    background-image: url(../../../assets/images/incisors-up.png); }
+    background-image: url(../../../assets/images/incisors-up.webp); }
   #dentalTreatment .molar-down-1 {
-    background-image: url(../../../assets/images/molar-down.png); }
+    background-image: url(../../../assets/images/molar-down.webp); }
   #dentalTreatment .molar-down-2 {
-    background-image: url(../../../assets/images/molar-down.png); }
+    background-image: url(../../../assets/images/molar-down.webp); }
   #dentalTreatment .molar-down-3 {
-    background-image: url(../../../assets/images/molar-down.png); }
+    background-image: url(../../../assets/images/molar-down.webp); }
   #dentalTreatment .molar-down-14 {
-    background-image: url(../../../assets/images/molar-down.png); }
+    background-image: url(../../../assets/images/molar-down.webp); }
   #dentalTreatment .molar-down-15 {
-    background-image: url(../../../assets/images/molar-down.png); }
+    background-image: url(../../../assets/images/molar-down.webp); }
   #dentalTreatment .molar-down-16 {
-    background-image: url(../../../assets/images/molar-down.png); }
+    background-image: url(../../../assets/images/molar-down.webp); }
   #dentalTreatment .premolar-down-4 {
-    background-image: url(../../../assets/images/premolar-down.png); }
+    background-image: url(../../../assets/images/premolar-down.webp); }
   #dentalTreatment .premolar-down-5 {
-    background-image: url(../../../assets/images/premolar-down.png); }
+    background-image: url(../../../assets/images/premolar-down.webp); }
   #dentalTreatment .premolar-down-12 {
-    background-image: url(../../../assets/images/premolar-down.png); }
+    background-image: url(../../../assets/images/premolar-down.webp); }
   #dentalTreatment .premolar-down-13 {
-    background-image: url(../../../assets/images/premolar-down.png); }
+    background-image: url(../../../assets/images/premolar-down.webp); }
   #dentalTreatment .canine-down-6 {
-    background-image: url(../../../assets/images/canine-down.png); }
+    background-image: url(../../../assets/images/canine-down.webp); }
   #dentalTreatment .canine-down-11 {
-    background-image: url(../../../assets/images/canine-down.png); }
+    background-image: url(../../../assets/images/canine-down.webp); }
   #dentalTreatment .incisors-down-7 {
-    background-image: url(../../../assets/images/incisors-down.png); }
+    background-image: url(../../../assets/images/incisors-down.webp); }
   #dentalTreatment .incisors-down-8 {
-    background-image: url(../../../assets/images/incisors-down.png); }
+    background-image: url(../../../assets/images/incisors-down.webp); }
   #dentalTreatment .incisors-down-9 {
-    background-image: url(../../../assets/images/incisors-down.png); }
+    background-image: url(../../../assets/images/incisors-down.webp); }
   #dentalTreatment .incisors-down-10 {
-    background-image: url(../../../assets/images/incisors-down.png); }
+    background-image: url(../../../assets/images/incisors-down.webp); }
   #dentalTreatment div.tooltip {
     padding: 0px 5px;
     background: #ffbb99;
