--- a/client/src/Components/RegistrationPatientAr/registration.scss
+++ b/client/src/Components/RegistrationPatientAr/registration.scss
@@ -45,7 +45,7 @@
 
   .breadCrumb-Data {
     .hdg_bredcrump {
-      background: url("./../../assets/images/breadcrump_border_Ar.png")
+      background: url("./../../assets/images/breadcrump_border_Ar.webp")
         no-repeat top left #fff;
     }
 
