--- a/client/src/Components/Wrapper/autoComplete.css
+++ b/client/src/Components/Wrapper/autoComplete.css
@@ -49,7 +49,7 @@
   color: #000; }
 
 .myInput {
-  background-image: url("/css/searchicon.png");
+  background-image: url("/css/searchicon.webp");
   background-position: 10px 12px;
   background-repeat: no-repeat;
   width: 100%;
