--- a/client/src/Components/common/BreadCrumb/breadcrumb.css
+++ b/client/src/Components/common/BreadCrumb/breadcrumb.css
@@ -10,7 +10,7 @@
   background-color: #f8f8f8;
   height: 75px; }
   .breadCrumb-Data .hdg_bredcrump {
-    background: url("images/breadcrump_border.png") no-repeat top right #fff; }
+    background: url("../../../assets/images/breadcrump_border.webp") no-repeat top right #fff; }
   .breadCrumb-Data .header {
     margin-top: 10px; }
     .breadCrumb-Data .header label {
