--- a/client/src/Components/common/BreadCrumb/breadcrumb.scss
+++ b/client/src/Components/common/BreadCrumb/breadcrumb.scss
@@ -13,7 +13,8 @@
   background-color: #f8f8f8;
   height: 75px;
   .hdg_bredcrump {
-    background: url("images/breadcrump_border.png") no-repeat top right #fff;
+    background: url("../../../assets/images/breadcrump_border.webp") no-repeat
+      top right #fff;
   }
   .header {
     margin-top: 10px;
