--- a/client/src/Components/common/BreadCrumb/breadcrumbAr.scss
+++ b/client/src/Components/common/BreadCrumb/breadcrumbAr.scss
@@ -13,7 +13,7 @@
   background-color: #f8f8f8;
   height: 75px;
   .hdg_bredcrump {
-    background: url(images/breadcrump_border_Ar.png) no-repeat top left #fff;
+    background: url(images/breadcrump_border_Ar.webp) no-repeat top left #fff;
   }
   .header {
     margin-top: 10px;
