--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -872,7 +872,7 @@ $forntSize: 0.7rem;
     list-style: none;
 
     li {
-      background: url("./assets/images/pain_scale.png") no-repeat center
+      background: url("./assets/images/pain_scale.webp") no-repeat center
         transparent;
       width: 31px;
       height: 31px;
