--- a/client/src/Components/OPBillingAr/OPBillingAr.css
+++ b/client/src/Components/OPBillingAr/OPBillingAr.css
@@ -28,7 +28,7 @@
     margin-right: 10px;
     margin-left: 0px; }
   .arabicVersionOPbilling .breadCrumb-Data .hdg_bredcrump {
-    background: url("./../../assets/images/breadcrump_border_Ar.png") no-repeat top left #fff; }
+    background: url("./../../assets/images/breadcrump_border_Ar.webp") no-repeat top left #fff; }
   .arabicVersionOPbilling .breadCrumb-Data .spotlightSearchBox {
     margin-right: 0; }
   .arabicVersionOPbilling .breadCrumb-Data .spotlightSearchIconBox {
