--- a/client/src/Components/Wrapper/autoComplete.scss
+++ b/client/src/Components/Wrapper/autoComplete.scss
@@ -62,7 +62,7 @@
 }
 
 .myInput {
-  background-image: url("/css/searchicon.png");
+  background-image: url("/css/searchicon.webp");
   background-position: 10px 12px;
   background-repeat: no-repeat;
   width: 100%;
