Radiology Template UI Cleanup

--- a/client/src/Components/InvestigationSetup/RadTemplate/RadTemplate.css
+++ b/client/src/Components/InvestigationSetup/RadTemplate/RadTemplate.css
@@ -1,6 +1,5 @@
 .hptl-phase1-add-rad-tamplate-form {
-  background: #fff;
-  padding: 10px; }
+  background: #fff; }
   .hptl-phase1-add-rad-tamplate-form mark {
     background: none;
     color: red; }
