--- a/client/src/Components/InsuranceClaims/InvoiceGeneration/InvoiceGeneration.css
+++ b/client/src/Components/InsuranceClaims/InvoiceGeneration/InvoiceGeneration.css
@@ -1,6 +1,7 @@
 .hptl-phase1-invoice-generation-form {
   background: #ffff;
-  border-radius: 5px; }
+  border-radius: 5px;
+  margin-bottom: 55px; }
   .hptl-phase1-invoice-generation-form .form-details {
     padding: 5px;
     padding-bottom: 5px; }
@@ -23,3 +24,17 @@
     max-width: 98vw !important;
     height: 30vh !important;
     margin-bottom: 20px; }
+  .hptl-phase1-invoice-generation-form .insurance-sec {
+    border: 1px solid #cdd4d8;
+    margin-bottom: 15px;
+    border-radius: 0 0 0 5px; }
+    .hptl-phase1-invoice-generation-form .insurance-sec h5 {
+      border-bottom: 1px dashed #cdd4d8;
+      font-size: 0.9rem;
+      margin-left: -15px;
+      margin-right: -15px;
+      padding-left: 15px;
+      padding: 10px 15px;
+      padding-right: 15px; }
+  .hptl-phase1-invoice-generation-form .amount-sec .col-4 {
+    margin-bottom: 15px; }
