--- a/client/src/Components/InsuranceClaims/InvoiceGeneration/InvoiceGeneration.scss
+++ b/client/src/Components/InsuranceClaims/InvoiceGeneration/InvoiceGeneration.scss
@@ -1,6 +1,7 @@
 .hptl-phase1-invoice-generation-form {
   background: #ffff;
   border-radius: 5px;
+  margin-bottom: 55px;
   .form-details {
     padding: 5px;
     padding-bottom: 5px;
@@ -33,6 +34,25 @@
       max-width: 98vw !important;
       height: 30vh !important;
       margin-bottom: 20px;
+    }
+  }
+  .insurance-sec {
+    border: 1px solid #cdd4d8;
+    margin-bottom: 15px;
+    border-radius: 0 0 0 5px;
+    h5 {
+      border-bottom: 1px dashed #cdd4d8;
+      font-size: 0.9rem;
+      margin-left: -15px;
+      margin-right: -15px;
+      padding-left: 15px;
+      padding: 10px 15px;
+      padding-right: 15px;
+    }
+  }
+  .amount-sec {
+    .col-4 {
+      margin-bottom: 15px;
     }
   }
 }
