--- a/client/src/Components/PatientProfile/patientprofile.css
+++ b/client/src/Components/PatientProfile/patientprofile.css
@@ -68,7 +68,7 @@
         color: #34b8bc; }
   .patientProfile .patientInfo-Top .patientVital {
     font-size: 0.8rem;
-    width: 33%;
+    max-width: 33%;
     line-height: 1.3rem;
     padding-left: 10px;
     padding-right: 10px;
