--- a/client/src/Components/EmployeeManagement/EmployeeMasterIndex/EmployeeMaster/PersonalDetails/PersonalDetails.css
+++ b/client/src/Components/EmployeeManagement/EmployeeMasterIndex/EmployeeMaster/PersonalDetails/PersonalDetails.css
@@ -1,33 +1,36 @@
-.hptl-phase1-add-patient-form .primary-details {
-  border-right: 1px dashed #d3d3d3;
-  padding-top: 8px; }
-
-.hptl-phase1-add-patient-form mark {
-  background: none;
-  color: red; }
-
-.hptl-phase1-add-patient-form .centerAlign {
-  text-align: center; }
-
-.hptl-phase1-add-patient-form .text_field {
-  width: 100% !important;
-  background-color: #fbfbfb;
-  margin-right: 5px; }
-
-.hptl-phase1-add-patient-form .paddin-bottom-5 {
-  padding-bottom: 4px; }
-
-.hptl-phase1-add-patient-form .secondary-details {
-  padding-top: 8px; }
-  .hptl-phase1-add-patient-form .secondary-details .secondary-box-container .attach-design {
-    background: #8c8c8c;
-    color: #fff;
-    position: relative;
-    cursor: pointer;
-    margin-left: -1px;
-    margin-right: -1px; }
-  .hptl-phase1-add-patient-form .secondary-details .secondary-box-container .preview-image {
-    position: absolute;
-    top: -1px;
-    left: 15px;
-    height: 101px; }
+.hptl-phase1-add-employee-form {
+  padding: 0 15px; }
+  .hptl-phase1-add-employee-form h6 {
+    margin: 10px 0 0;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #d3d3d3; }
+    .hptl-phase1-add-employee-form h6 span {
+      border-bottom: 3px solid #00cbd0; }
+  .hptl-phase1-add-employee-form .primary-details {
+    border-right: 1px dashed #d3d3d3;
+    padding-top: 8px; }
+  .hptl-phase1-add-employee-form mark {
+    background: none;
+    color: red; }
+  .hptl-phase1-add-employee-form .centerAlign {
+    text-align: center; }
+  .hptl-phase1-add-employee-form .text_field {
+    width: 100% !important;
+    background-color: #fbfbfb;
+    margin-right: 5px; }
+  .hptl-phase1-add-employee-form .paddin-bottom-5 {
+    padding-bottom: 4px; }
+  .hptl-phase1-add-employee-form .secondary-details {
+    padding-top: 8px; }
+    .hptl-phase1-add-employee-form .secondary-details .secondary-box-container .attach-design {
+      background: #8c8c8c;
+      color: #fff;
+      position: relative;
+      cursor: pointer;
+      margin-left: -1px;
+      margin-right: -1px; }
+    .hptl-phase1-add-employee-form .secondary-details .secondary-box-container .preview-image {
+      position: absolute;
+      top: -1px;
+      left: 15px;
+      height: 101px; }
